# kandown

./: .gitignore  Cargo.toml  DEMOBOARD.md  README.md  package-lock.json  package.json
.cargo/: config.toml
crates/kandown/: Cargo.toml
crates/kandown-wasm/: Cargo.toml
crates/kandown-wasm/src/: lib.rs
crates/kandown/src/: kanban.rs  lib.rs  parsed_document.rs  parser.rs
crates/kandown/src/test/: mod.rs  test_kanban.rs  test_parser.rs
web/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/.storybook/: main.ts
web/src/: main.css  main.tsx  vite-env.d.ts
web/src/components/app/: App.module.css  App.tsx
web/src/components/app/stories/: App.stories.tsx
web/src/components/board/: BoardColumn.module.css  BoardColumn.tsx  BoardItem.module.css  BoardItem.tsx  KanbanBoard.module.css  KanbanBoard.tsx  SortableItem.module.css  SortableItem.tsx
web/src/components/board/stories/: KanbanBoard.stories.tsx
web/src/components/card/: CardComponents.module.css  CardComponents.tsx  CardForm.module.css  CardForm.tsx
web/src/components/context/: KanbanDataProvider.tsx
web/src/components/views/: BoardView.module.css  BoardView.tsx  TableView.module.css  TableView.tsx
web/src/utils/: helpers.ts  keyboardCoordinates.ts
xtask/: Cargo.toml  xtask.rs
