[package]
name = "kandown-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
kandown = { path = "../kandown" }

reflect_to = { path = "../../../../rs/reflect_to/crates/reflect_to" }

anyhow = "1.0.97"
console_error_panic_hook = "0.1.7"
nom = "8.0.0"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "generate-ts-types"
path = "bin/generate-ts-types.rs"

[build-dependencies]
anyhow = "1.0.97"
console_error_panic_hook = "0.1.7"
nom = "8.0.0"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"